--- a/etc/jenkins_jobs/config/projects.yaml
+++ b/etc/jenkins_jobs/config/projects.yaml
@@ -2,7 +2,7 @@
     name: sandbox
     github-org: openstack-dev
     node: master
-    vendor: myvendor
+    vendor: cloudbyte
 
     jobs:
         - noop-check-communication
